--- a/Business/index.html
+++ b/Business/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body class="reset">
-
     <header>
         <ul>
             <li>
@@ -52,7 +51,38 @@
         </section>
     </main>
     <footer>
-        footer
+        <div class="row">
+            <div class="column">
+                <ul>
+                    <li>Privacy Policy</li>
+                    <li>Legal Policy</li>
+                    <li>Refunds</li>
+                    <li>Cookies</li>
+                </ul>
+            </div>
+            <div class="column">
+                <ul>
+                    <li>Support</li>
+                    <li>Jobs</li>
+                    <li>About</li>
+                    <li>Agreement</li>
+                </ul>
+            </div>
+            <div class="column">
+                <ul>
+                    <li>Upload</li>
+                    <li>Gift Cards</li>
+                </ul>
+            </div>
+            <div class="column">
+                <ul>
+                    <li>Diamond</li>
+                    <li>Diamond</li>
+                    <li>Diamond</li>
+                    <li>Diamond</li>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
