--- a/Business/support.html
+++ b/Business/support.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Support</h1>
+    <header>
+        <ul>
+            <li>
+                <img src="assets/popcat.jpeg" class="header-image">
+            </li>
+            <li>
+                <img src="assets/popcat.jpeg" class="header-image">
+                <input type="text" class="search-bar" placeholder="Search">
+                <img src="assets/popcat.jpeg" class="header-image">
+                <a href="support.html" class="link">Support</a>
+            </li>
+            <li>
+                <img src="assets/popcat.jpeg" class="header-image">
+                <a href="wish-list.html" class="link">Wish List</a>
+            </li>
+            <li>
+                <img src="assets/popcat.jpeg" class="header-image">
+                <a href="login.html" class="link">Login / Sign up</a>
+            </li>
+        </ul>
+    </header>
+    <main>
+        <section>
+            
+        </section>
+    </main>
 </body>
 </html>
