--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <ul>
             <li>
-                <img src="assets/Diamond-Logo.png" class="header-logo">
+                <img src="assets/diamond-logo.png" class="header-logo">
             </li>
             <li>
                 <img src="assets/magnifying-glass-solid.svg" class="header-image">
@@ -54,6 +54,9 @@
         </section>
     </main>
     <footer>
+        <div class="diamond-logo">
+            <img src="assets/footer-diamond-logo.png">
+        </div>
         <div class="row">
             <div class="column">
                 <ul>
@@ -79,10 +82,10 @@
             </div>
             <div class="column">
                 <ul>
-                    <li>Diamond</li>
-                    <li>Diamond</li>
-                    <li>Diamond</li>
-                    <li>Diamond</li>
+                    <li><img src="assets/instagram.svg" class="footer-logos"> Diamond</li>
+                    <li><img src="assets/discord.svg" class="footer-logos"> Diamond</li>
+                    <li><img src="assets/facebook.svg" class="footer-logos"> Diamond</li>
+                    <li><img src="assets/x-twitter.svg" class="footer-logos"> Diamond</li>
                 </ul>
             </div>
         </div>
