--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <header>
         <ul>
             <li>
-                <img src="assets/diamond-logo.png" class="header-logo">
+                <img src="assets/Diamond-Logo-With-Background.png" class="header-logo">
             </li>
-            <li>
+            <li class="search-bar-box">
                 <img src="assets/magnifying-glass-solid.svg" class="header-image">
                 <input type="text" class="search-bar" placeholder="Search">
             </li>
@@ -58,7 +58,7 @@
     </main>
     <footer>
         <div class="diamond-logo">
-            <img src="assets/footer-diamond-logo.png">
+            <img src="assets/footer-logo.png">
         </div>
         <div class="row">
             <div class="column">
@@ -87,10 +87,10 @@
             </div>
             <div class="column">
                 <ul>
-                    <li><img src="assets/instagram.svg" class="footer-logos"> Diamond</li>
-                    <li><img src="assets/discord.svg" class="footer-logos"> Diamond</li>
-                    <li><img src="assets/facebook.svg" class="footer-logos"> Diamond</li>
-                    <li><img src="assets/x-twitter.svg" class="footer-logos"> Diamond</li>
+                    <li><img src="assets/instagram.svg" class="icons"> Diamond</li>
+                    <li><img src="assets/discord.svg" class="icons"> Diamond</li>
+                    <li><img src="assets/facebook.svg" class="icons"> Diamond</li>
+                    <li><img src="assets/x-twitter.svg" class="icons"> Diamond</li>
                 </ul>
             </div>
         </div>
