patch -- header and nav

--- a/index.html
+++ b/index.html
@@ -37,7 +37,42 @@
         </ul>
     </header>
     <nav>
-        nav
+        <ul>
+            <div class="dropdown">
+                <button class="dropbtn">Categories</button>
+                <div class="dropdown-content">
+                  <a href="#">Link 1</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                </div>
+            </div>
+              <div class="dropdown">
+                <button class="dropbtn">Price</button>
+                <div class="dropdown-content">
+                  <a href="#">Link 1</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                </div>
+            </div>
+            </div>
+              <div class="dropdown">
+                <button class="dropbtn">System</button>
+                <div class="dropdown-content">
+                  <a href="#">Link 1</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                </div>
+            </div>
+            </div>
+                <div class="dropdown">
+                <button class="dropbtn">Early Future</button>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div>
+        </ul>
     </nav>
     <main>
         <section class="hero">
