patch-vip-unfinished

--- a/index.html
+++ b/index.html
@@ -79,7 +79,17 @@
             hero
         </section>
         <section class="vip">
-            vip
+            <ul>
+                <div class="space">   
+
+                </div>
+                <div class="banner">   
+                    <img src="assets/diamond-premium.png">
+                </div>
+                <div class="space">   
+                    
+                </div>
+            </ul>
         </section>
         <section class="recommended">
             recommended
