--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Bungee' rel='stylesheet'>
 </head>
 
 <body class="reset">
@@ -78,18 +79,16 @@
         <section class="hero">
             hero
         </section>
-        <section class="vip">
-            <ul>
-                <div class="space">   
-
-                </div>
-                <div class="banner">   
-                    <img src="assets/diamond-premium.png">
-                </div>
-                <div class="space">   
-                    
-                </div>
-            </ul>
+        <section class="vip"> 
+            <div class="premium">   
+                DIAMOND PREMIUM
+            </div>
+            <div>
+                <img src="assets/Diamond-Logo.png" class="diamond-logo-in-banner">
+            </div>
+            <div>
+                <button class="buy-now-button">Buy Now!</button>
+            </div>
         </section>
         <section class="recommended">
             recommended
