--- a/login.html
+++ b/login.html
@@ -10,7 +10,76 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
-<body>
-    <h1>Login</h1>
+<body class="reset">
+    <header>
+        <ul>
+            <li>
+                <img src="assets/Diamond-Logo-With-Background.png" class="header-logo">
+            </li>
+            <li class="search-bar-box">
+                <img src="assets/magnifying-glass-solid.svg" class="header-image">
+                <input type="text" class="search-bar" placeholder="Search">
+            </li>
+            <li>
+                <img src="assets/question-solid.svg" class="header-image">
+                <a href="support.html" class="link">Support</a>
+            </li>
+            <li>
+                <img src="assets/heart-solid.svg" class="header-image">
+                <a href="wish-list.html" class="link">Wish List</a>
+            </li>
+            <li>
+                <img src="assets/user-solid.svg" class="header-image">
+                <a href="login.html" class="link">Login / Sign up</a>
+            </li>
+        </ul>
+    </header>
+    <main> 
+        <div class="box">
+            <h1>Login</h1>
+            <input type="text" class="search-bar" placeholder="Username">
+            <input type="text" class="search-bar" placeholder="Password">
+            <input type="submit" value="Submit" class="button">
+        </div>
+    </main>
+    <footer>
+        <div class="diamond-logo">
+            <img src="assets/footer-logo.png">
+        </div>
+        <div class="row">
+            <div class="column">
+                <ul>
+                    <li>Privacy Policy</li>
+                    <li>Legal Policy</li>
+                    <li>Refunds</li>
+                    <li>Cookies</li>
+                </ul>
+            </div>
+            <div class="column">
+                <ul>
+                    <li>Support</li>
+                    <li>Jobs</li>
+                    <li>About</li>
+                    <li>Agreement</li>
+                </ul>
+            </div>
+            <div class="column">
+                <ul>
+                    <li>Upload</li>
+                    <li>Gift Cards</li>
+                    <li>Responsibility</li>
+                    <li>FAQ</li>
+                </ul>
+            </div>
+            <div class="column">
+                <ul>
+                    <li><img src="assets/instagram.svg" class="icons"> Diamond</li>
+                    <li><img src="assets/discord.svg" class="icons"> Diamond</li>
+                    <li><img src="assets/facebook.svg" class="icons"> Diamond</li>
+                    <li><img src="assets/x-twitter.svg" class="icons"> Diamond</li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
