--- a/support.html
+++ b/support.html
@@ -14,8 +14,9 @@
     <header>
         <ul>
             <li>
-                <img src="assets/Diamond-Logo-With-Background.png" class="header-logo">
-            </li>
+                <a href="index.html">
+                    <img src="assets/Diamond-Logo-With-Background.png" class="header-logo">
+                </a>            </li>
             <li class="search-bar-box">
                 <img src="assets/magnifying-glass-solid.svg" class="header-image">
                 <input type="text" class="search-bar" placeholder="Search">
@@ -26,7 +27,7 @@
             </li>
             <li>
                 <img src="assets/heart-solid.svg" class="header-image">
-                <a href="wish-list.html" class="link">Wish List</a>
+                <a href="" class="link">Wish List</a>
             </li>
             <li>
                 <img src="assets/user-solid.svg" class="header-image">
