patch-hero-image1

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                   <li id="carousel__slide1"
                       tabindex="0"
                       class="carousel__slide">
+                      <div class="hero-image"><img src="assets/hero-image1.png"
+                        width="1500"
+                        ></div>
                     <div class="carousel__snapper">
                       <a href="#carousel__slide4"
                          class="carousel__prev">Go to last slide</a>
