patch-hero-image2

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
                 
                 <div class="mySlides fade">
-                  <img src="assets/Diamond-Logo-With-Background.png" style="width:100%">
+                  <img src="assets/hero-image2.png" style="width:100%">
                 </div>
                 
                 <div class="mySlides fade">
