--- a/index.html
+++ b/index.html
@@ -44,35 +44,35 @@
             <div class="dropdown">
                 <button class="dropbtn">Categories</button>
                 <div class="dropdown-content">
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
+                  <a href="#">Adventure</a>
+                  <a href="#">Horror</a>
+                  <a href="#">Explore</a>
                 </div>
             </div>
               <div class="dropdown">
                 <button class="dropbtn">Price</button>
                 <div class="dropdown-content">
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
+                  <a href="#">Free</a>
+                  <a href="#">$0-$100</a>
+                  <a href="#">$100+</a>
                 </div>
             </div>
             </div>
               <div class="dropdown">
                 <button class="dropbtn">System</button>
                 <div class="dropdown-content">
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
+                  <a href="#">Windows</a>
+                  <a href="#">Mac OS</a>
+                  <a href="#">Linux</a>
                 </div>
             </div>
             </div>
                 <div class="dropdown">
                 <button class="dropbtn">Early Future</button>
                 <div class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
+                    <a href="#">Projects</a>
+                    <a href="#">Courses</a>
+                    <a href="#">Contests</a>
                 </div>
             </div>
         </ul>
@@ -80,6 +80,7 @@
     <main>
         <section class="hero">
             <!-- https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_slideshow -->
+            <br>
             <div class="slideshow-container">
 
                 <div class="mySlides fade">
@@ -91,7 +92,7 @@
                 </div>
                 
                 <div class="mySlides fade">
-                  <img src="assets/diamond-premium.png" style="width:100%">
+                  <img src="assets/hero-image3.png" style="width:100%">
                 </div>
                 
                 <a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -112,13 +113,61 @@
             </div>
         </section>
         <section class="recommended">
-            recommended
+            <div>RECOMMENDED</div>
+            <div class="body">
+                <div id="carousel1" class="body-carousel">
+                    <button class="body-carousel-button prev">&#10094;</button>
+                    <div class="body-carousel-images">
+                        <img src="assets/Recommand1.jpeg">
+                        <img src="assets/Recommand1.jpeg">
+                        <img src="assets/Recommand1.jpeg">
+                        <img src="assets/Recommand1.jpeg">
+                        <img src="assets/Recommand2.png">
+                        <img src="assets/Recommand2.png">
+                        <img src="assets/Recommand2.png">
+                        <img src="assets/Recommand2.png">
+                    </div>
+                    <button class="body-carousel-button next">&#10095;</button>
+                </div>
+            </div>
         </section>
         <section class="new-release">
-            new release
+            <div>NEW RELEASED</div>
+            <div class="body">
+                <div id="carousel2" class="body-carousel">
+                    <button class="body-carousel-button prev">&#10094;</button>
+                    <div class="body-carousel-images">
+                        <img src="assets/Recommand1.jpeg">
+                        <img src="assets/Recommand1.jpeg">
+                        <img src="assets/Recommand1.jpeg">
+                        <img src="assets/Recommand1.jpeg">
+                        <img src="assets/Recommand2.png">
+                        <img src="assets/Recommand2.png">
+                        <img src="assets/Recommand2.png">
+                        <img src="assets/Recommand2.png">
+                    </div>
+                    <button class="body-carousel-button next">&#10095;</button>
+                </div>
+            </div>
         </section>
         <section class="free-to-play">
-            free to play
+            <div>FREE TO PLAY</div>
+            <div class="body">
+                <div id="carousel3" class="body-carousel">
+                    <button class="body-carousel-button prev">&#10094;</button>
+                    <div class="body-carousel-images">
+                        <img src="assets/Recommand1.jpeg">
+                        <img src="assets/Recommand1.jpeg">
+                        <img src="assets/Recommand1.jpeg">
+                        <img src="assets/Recommand1.jpeg">
+                        <img src="assets/Recommand2.png">
+                        <img src="assets/Recommand2.png">
+                        <img src="assets/Recommand2.png">
+                        <img src="assets/Recommand2.png">
+                    </div>
+                    <button class="body-carousel-button next">&#10095;</button>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
