--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Bungee' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Exo' rel='stylesheet'>
 </head>
 <body class="reset">
     <header>
@@ -113,57 +114,129 @@
             </div>
         </section>
         <section class="recommended">
-            <div>RECOMMENDED</div>
+            <div class="section-title">RECOMMENDED</div>
             <div class="body">
                 <div id="carousel1" class="body-carousel">
                     <button class="body-carousel-button prev">&#10094;</button>
                     <div class="body-carousel-images">
-                        <img src="assets/Recommand1.jpeg">
-                        <img src="assets/Recommand1.jpeg">
-                        <img src="assets/Recommand1.jpeg">
-                        <img src="assets/Recommand1.jpeg">
-                        <img src="assets/Recommand2.png">
-                        <img src="assets/Recommand2.png">
-                        <img src="assets/Recommand2.png">
-                        <img src="assets/Recommand2.png">
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <div class="price-tag">$19.99</div>
+                        </div>
                     </div>
                     <button class="body-carousel-button next">&#10095;</button>
                 </div>
             </div>
         </section>
         <section class="new-release">
-            <div>NEW RELEASED</div>
+            <div class="section-title">NEW RELEASED</div>
             <div class="body">
                 <div id="carousel2" class="body-carousel">
                     <button class="body-carousel-button prev">&#10094;</button>
                     <div class="body-carousel-images">
-                        <img src="assets/Recommand1.jpeg">
-                        <img src="assets/Recommand1.jpeg">
-                        <img src="assets/Recommand1.jpeg">
-                        <img src="assets/Recommand1.jpeg">
-                        <img src="assets/Recommand2.png">
-                        <img src="assets/Recommand2.png">
-                        <img src="assets/Recommand2.png">
-                        <img src="assets/Recommand2.png">
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <div class="price-tag">$19.99</div>
+                        </div>
                     </div>
                     <button class="body-carousel-button next">&#10095;</button>
                 </div>
             </div>
         </section>
         <section class="free-to-play">
-            <div>FREE TO PLAY</div>
+            <div class="section-title">FREE TO PLAY</div>
             <div class="body">
                 <div id="carousel3" class="body-carousel">
                     <button class="body-carousel-button prev">&#10094;</button>
                     <div class="body-carousel-images">
-                        <img src="assets/Recommand1.jpeg">
-                        <img src="assets/Recommand1.jpeg">
-                        <img src="assets/Recommand1.jpeg">
-                        <img src="assets/Recommand1.jpeg">
-                        <img src="assets/Recommand2.png">
-                        <img src="assets/Recommand2.png">
-                        <img src="assets/Recommand2.png">
-                        <img src="assets/Recommand2.png">
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <div class="price-tag">$19.99</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <div class="price-tag">$19.99</div>
+                        </div>
                     </div>
                     <button class="body-carousel-button next">&#10095;</button>
                 </div>
