--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="index.css" />
     <title>Login</title>
     <link rel="icon" href="assets/website-icon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,8 @@
             <li>
                 <a href="index.html">
                     <img src="assets/Diamond-Logo-With-Background.png" class="header-logo">
-                </a>            </li>
+                </a>
+            </li>
             <li class="search-bar-box">
                 <img src="assets/magnifying-glass-solid.svg" class="header-image">
                 <input type="text" class="search-bar" placeholder="Search">
@@ -38,8 +39,8 @@
     <main> 
         <div class="box">
             <h1>Login</h1>
-            <input type="text" class="search-bar" placeholder="Username">
-            <input type="text" class="search-bar" placeholder="Password">
+            <input type="text" class="search-bar space" placeholder="Username">
+            <input type="text" class="search-bar space" placeholder="Password">
             <input type="submit" value="Submit" class="button">
         </div>
     </main>
