--- a/support.html
+++ b/support.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="support.css" />
+    <link rel="stylesheet" href="index.css" />
     <title>Support</title>
     <link rel="icon" href="assets/website-icon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,8 @@
             <li>
                 <a href="index.html">
                     <img src="assets/Diamond-Logo-With-Background.png" class="header-logo">
-                </a>            </li>
+                </a>
+            </li>
             <li class="search-bar-box">
                 <img src="assets/magnifying-glass-solid.svg" class="header-image">
                 <input type="text" class="search-bar" placeholder="Search">
@@ -37,7 +38,7 @@
     </header>
     <main>
         <div class="title">
-            <h1>Support</h1>
+            <h1 class="big-text">Support</h1>
         </div>
         <div class="bar">
             
