--- a/index.html
+++ b/index.html
@@ -120,35 +120,35 @@
                     <button class="body-carousel-button prev">&#10094;</button>
                     <div class="body-carousel-images">
                         <div class="image-wrapper">
-                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <img src="assets/Recommend1.jpeg" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <img src="assets/Recommend2.png" alt="Recommendation 2">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <img src="assets/Recommend3.jpg" alt="Recommendation 3">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <img src="assets/Recommend4.jpeg" alt="Recommendation 4">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <img src="assets/Recommend5.jpeg" alt="Recommendation 5">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <img src="assets/Recommend6.png" alt="Recommendation 6">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <img src="assets/Recommend7.png" alt="Recommendation 7">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <img src="assets/Recommend8.png" alt="Recommendation 8">
                             <div class="price-tag">$19.99</div>
                         </div>
                     </div>
@@ -163,35 +163,35 @@
                     <button class="body-carousel-button prev">&#10094;</button>
                     <div class="body-carousel-images">
                         <div class="image-wrapper">
-                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <img src="assets/Recommend1.jpeg" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <img src="assets/Recommend1.jpeg" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <img src="assets/Recommend1.jpeg" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <img src="assets/Recommend1.jpeg" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <img src="assets/Recommend2.png" alt="Recommendation 2">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <img src="assets/Recommend2.png" alt="Recommendation 2">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <img src="assets/Recommend2.png" alt="Recommendation 2">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <img src="assets/Recommend2.png" alt="Recommendation 2">
                             <div class="price-tag">$19.99</div>
                         </div>
                     </div>
@@ -206,35 +206,35 @@
                     <button class="body-carousel-button prev">&#10094;</button>
                     <div class="body-carousel-images">
                         <div class="image-wrapper">
-                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <img src="assets/Recommend1.jpeg" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <img src="assets/Recommend1.jpeg" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <img src="assets/Recommend1.jpeg" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand1.jpeg" alt="Recommendation 1">
+                            <img src="assets/Recommend1.jpeg" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <img src="assets/Recommend2.png" alt="Recommendation 2">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <img src="assets/Recommend2.png" alt="Recommendation 2">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <img src="assets/Recommend2.png" alt="Recommendation 2">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommand2.png" alt="Recommendation 2">
+                            <img src="assets/Recommend2.png" alt="Recommendation 2">
                             <div class="price-tag">$19.99</div>
                         </div>
                     </div>
