--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend5.jpeg" alt="Recommendation 5">
+                            <img src="assets/Recommend5.ico" alt="Recommendation 5">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend6.png" alt="Recommendation 6">
+                            <img src="assets/Recommend6.jpeg" alt="Recommendation 6">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
@@ -206,35 +206,35 @@
                     <button class="body-carousel-button prev">&#10094;</button>
                     <div class="body-carousel-images">
                         <div class="image-wrapper">
-                            <img src="assets/Recommend1.jpeg" alt="Recommendation 1">
+                            <img src="assets/free1.png" alt="Free 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend1.jpeg" alt="Recommendation 1">
+                            <img src="assets/free2.jpeg" alt="Free 2">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend1.jpeg" alt="Recommendation 1">
+                            <img src="assets/free3.jpeg" alt="Free 3">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend1.jpeg" alt="Recommendation 1">
+                            <img src="assets/free4.png" alt="Free 4">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend2.png" alt="Recommendation 2">
+                            <img src="assets/free5.png" alt="Free 5">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend2.png" alt="Recommendation 2">
+                            <img src="assets/free6.png" alt="Free 6">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend2.png" alt="Recommendation 2">
+                            <img src="assets/Recommend2.png" alt="Free 7">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend2.png" alt="Recommendation 2">
+                            <img src="assets/Recommend2.png" alt="Free 8">
                             <div class="price-tag">$19.99</div>
                         </div>
                     </div>
