--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend7.png" alt="Recommendation 7">
+                            <img src="assets/Recommend7.jpeg" alt="Recommendation 7">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
@@ -230,11 +230,11 @@
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend2.png" alt="Free 7">
+                            <img src="assets/free7.png" alt="Free 7">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend2.png" alt="Free 8">
+                            <img src="assets/free8.png" alt="Free 8">
                             <div class="price-tag">$19.99</div>
                         </div>
                     </div>
