--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <div class="dropdown">
                 <button class="dropbtn">Price</button>
                 <div class="dropdown-content">
-                  <a href="#">Free</a>
+                  <a href="#free-to-play">Free</a>
                   <a href="#">$0-$100</a>
                   <a href="#">$100+</a>
                 </div>
@@ -199,7 +199,7 @@
                 </div>
             </div>
         </section>
-        <section class="free-to-play">
+        <section class="free-to-play" id="free-to-play">
             <div class="section-title">FREE TO PLAY</div>
             <div class="body">
                 <div id="carousel3" class="body-carousel">
