--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <button class="body-carousel-button prev">&#10094;</button>
                     <div class="body-carousel-images">
                         <div class="image-wrapper">
-                            <img src="assets/new-released-1.png" alt="Recommendation 1">
+                            <img src="assets/new-released-1.ico" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
@@ -171,27 +171,27 @@
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/new-released-2.png" alt="Recommendation 1">
+                            <img src="assets/new-released-3.png" alt="Recommendation 1">
+                            <div class="price-tag">Free</div>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="assets/new-released-4.png" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/new-released-2.png" alt="Recommendation 1">
+                            <img src="assets/new-released-5.jpeg" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/new-released-2.png" alt="Recommendation 1">
-                            <div class="price-tag">$19.99</div>
+                            <img src="assets/new-released-6.png" alt="Recommendation 1">
+                            <div class="price-tag">Free</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/new-released-2.png" alt="Recommendation 1">
-                            <div class="price-tag">$19.99</div>
+                            <img src="assets/new-released-7.webp" alt="Recommendation 1">
+                            <div class="price-tag">Free</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/new-released-2.png" alt="Recommendation 1">
-                            <div class="price-tag">$19.99</div>
-                        </div>
-                        <div class="image-wrapper">
-                            <img src="assets/new-released-2.png" alt="Recommendation 1">
+                            <img src="assets/new-released-8.png" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                     </div>
@@ -222,7 +222,7 @@
                             <div class="price-tag">Free</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/free-5.png" alt="Free 5">
+                            <img src="assets/free-5.webp" alt="Free 5">
                             <div class="price-tag">Free</div>
                         </div>
                         <div class="image-wrapper">
@@ -234,7 +234,7 @@
                             <div class="price-tag">Free</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/free-8.png" alt="Free 8">
+                            <img src="assets/free-8.webp" alt="Free 8">
                             <div class="price-tag">Free</div>
                         </div>
                     </div>
