--- a/login.html
+++ b/login.html
@@ -37,11 +37,20 @@
         </ul>
     </header>
     <main> 
+        <h3 class="title">Diamond Account</h3>
         <div class="box">
-            <h1>Login</h1>
-            <input type="text" class="search-bar space" placeholder="Username">
-            <input type="text" class="search-bar space" placeholder="Password">
-            <input type="submit" value="Submit" class="button">
+            <h4 class="subtitle">Sign in with password</h4>
+            <h6 class="bigger">E-mail address</h6>
+            <input type="text" class="search-bar" placeholder="E-mail address">
+            <h6 class="bigger">Password</h6>
+            <input type="text" class="search-bar" placeholder="Password">
+            <button class="buy-now-button edit">Sign in</button>
+        </div>
+        <a href="" class="link center">Forgot your password?</a>
+        <div class="box">
+            <h4 class="subtitle diff-width">Sign in with</h4>
+            <input type="submit" value="Google" class="buttons">
+            <input type="submit" value="Sign in with Apple" class="buttons">
         </div>
     </main>
     <footer>
