--- a/support.html
+++ b/support.html
@@ -38,7 +38,7 @@
     </header>
     <main>
         <div class="title">
-            <h1 class="big-text">Support</h1>
+            <h1 class="big-text-right">Support</h1>
         </div>
         <div class="bar">
             
