--- a/support.html
+++ b/support.html
@@ -37,18 +37,20 @@
         </ul>
     </header>
     <main>
-        <div class="title">
-            <h1 class="big-text-right">Support</h1>
+        <div>
+            <h1 class="big-text">Support</h1>
         </div>
         <div class="bar">
-            
+            <input type="text" class="search-bar extra" placeholder="Search">
         </div>
         <div class="recommended-article">
-            <ul>
-                <li>
-                    Recommended Article
-                </li>
+            <h3 class="subtitle not-mid">Recommended Article</h3>
+            <ul class="articles">
+                <li>How to fix my computer after my dog ate it? 2023-06-23</li>
+                <li>My computer is flash banging my eyes. Help! 2023-08-03</li>
+                <li>Drake smashed my phone. How to fix? 2024-04-10</li>
             </ul>
+            <br><br>
         </div>
     </main>    <footer>
         <div class="diamond-logo">
