--- a/support.html
+++ b/support.html
@@ -41,6 +41,7 @@
             <h1 class="big-text">Support</h1>
         </div>
         <div class="bar">
+            <img src="assets/michael.png" class="michael">
             <input type="text" class="search-bar extra" placeholder="Search">
         </div>
         <div class="recommended-article">
