--- a/login.html
+++ b/login.html
@@ -43,14 +43,15 @@
             <h6 class="bigger">E-mail address</h6>
             <input type="text" class="search-bar" placeholder="E-mail address">
             <h6 class="bigger">Password</h6>
-            <input type="text" class="search-bar" placeholder="Password">
-            <button class="buy-now-button edit">Sign in</button>
+            <input type="password" class="search-bar" placeholder="Password">
+            <div class="flex-container">
+                <button class="buy-now-button edit">Sign in</button>
+            </div>
         </div>
-        <a href="" class="link center">Forgot your password?</a>
         <div class="box">
             <h4 class="subtitle diff-width">Sign in with</h4>
-            <input type="submit" value="Google" class="buttons">
-            <input type="submit" value="Sign in with Apple" class="buttons">
+            <button class="buttons">Google</button>
+            <button class="buttons">Sign in with Apple</button>
         </div>
     </main>
     <footer>
